--- a/index2.html
+++ b/index2.html
@@ -881,7 +881,7 @@
     </section>
 
     <div class="tabs">
-      <button class="tab-btn active" data-tab="dashboard">대시보드</button>
+      <button class="tab-btn active" data-tab="dashboard">Daily</button>
       <button class="tab-btn" data-tab="calendar">Calendar · Monthly</button>
       <button class="tab-btn" data-tab="annual">Yearly</button>
     </div>
