Improve calendar routine state visibility and update top stat labels

--- a/index2.html
+++ b/index2.html
@@ -857,13 +857,21 @@
     .day-cell.muted { opacity: 0.35; cursor: default; }
     .day-cell.today { border-color: #6d9be0; }
     .day-cell.selected { border-color: #2f67af; box-shadow: 0 8px 16px rgba(47, 103, 175, 0.14); }
-    .day-cell.routine-hit {
-      background: linear-gradient(180deg, #f5f9ff, #ffffff 48%);
-      border-color: #c4d9fb;
+    .day-cell.routine-partial {
+      background: linear-gradient(180deg, #fff7e5, #ffffff 48%);
+      border-color: #edc266;
+      box-shadow: inset 0 0 0 1px rgba(237, 194, 102, 0.28);
     }
     .day-cell.routine-full {
-      background: linear-gradient(180deg, #eaf3ff, #ffffff 52%);
-      border-color: #8eb2e5;
+      background: linear-gradient(180deg, #e9f4ff, #ffffff 52%);
+      border-color: #6ea5e2;
+      box-shadow: inset 0 0 0 1px rgba(110, 165, 226, 0.25);
+    }
+    .day-cell.routine-partial .day-num {
+      color: #b87400;
+    }
+    .day-cell.routine-full .day-num {
+      color: #1e5f9f;
     }
 
     .day-num {
@@ -902,6 +910,18 @@
       background: #f3f6fb;
       border-color: #d9e2f2;
       color: #6c7c95;
+    }
+    .day-meta.routine-meta.partial {
+      background: #fff2d8;
+      border-color: #efc978;
+      color: #a66500;
+      font-weight: 600;
+    }
+    .day-meta.routine-meta.full {
+      background: #e7f2ff;
+      border-color: #8fb8ea;
+      color: #1d5d99;
+      font-weight: 700;
     }
 
     .week-kpis {
@@ -1278,11 +1298,11 @@
       </div>
       <div class="stats">
         <article class="stat">
-          <div class="label">선택 날짜 남은 할 일</div>
+          <div class="label">선택날짜 남은 할일</div>
           <div class="value" id="statRemain">0</div>
         </article>
         <article class="stat">
-          <div class="label">루틴 달성율</div>
+          <div class="label">선택날짜 루틴 달성율</div>
           <div class="value" id="statRoutine">0%</div>
         </article>
       </div>
@@ -2468,6 +2488,11 @@
 
     function getRoutineDoneCountForDate(dKey) {
       const day = state.routineLogs[dKey] || {};
+      if (state.routines.length) {
+        return state.routines.reduce((count, routine) => {
+          return count + (isDoneValue(day[routine.id]) ? 1 : 0);
+        }, 0);
+      }
       return Object.values(day).filter((value) => isDoneValue(value)).length;
     }
 
@@ -2520,14 +2545,15 @@
         const summary = getDayCalendarSummary(dKey);
         const isToday = dKey === todayKey();
         const isSelected = dKey === state.selectedDate;
-        const routineClass = summary.routineDone > 0
-          ? (summary.routineTotal > 0 && summary.routineDone === summary.routineTotal ? "routine-full" : "routine-hit")
-          : "";
+        const routineState = summary.routineDone <= 0
+          ? "none"
+          : (summary.routineTotal > 0 && summary.routineDone === summary.routineTotal ? "full" : "partial");
+        const routineClass = routineState === "none" ? "" : `routine-${routineState}`;
 
         const metaHtml = `
           <div class="day-meta-grid">
             <span class="day-meta">업무 ${summary.todoCount}건</span>
-            <span class="day-meta">루틴 ${summary.routineDone}/${summary.routineTotal}</span>
+            <span class="day-meta routine-meta ${routineState === "none" ? "" : routineState}">루틴 ${summary.routineDone}/${summary.routineTotal}</span>
             <span class="day-meta flag ${summary.journalLogged ? "" : "off"}">저널 ${summary.journalLogged ? "기록" : "없음"}</span>
             <span class="day-meta flag ${summary.quickLogged ? "" : "off"}">노트 ${summary.quickLogged ? "기록" : "없음"}</span>
           </div>
